@@ -6,10 +6,6 @@
 #include "s4.h"
 #include "sndbrd.h"
 
-#define INITGAME(name, disp, flip) \
-static core_tGameData name##GameData = { GEN_S4, disp, {flip} }; \
-static void init_##name(void) { core_gameData = &name##GameData; }
-
 #define INITGAMEFULL(name, disp, sb, lflip,rflip,ss17,ss18,ss19,ss20,ss21,ss22) \
 static core_tGameData name##GameData = { GEN_S4, disp, {FLIP_SWNO(lflip,rflip),0,0,0,sb}, \
  NULL, {{0}},{0,{ss17,ss18,ss19,ss20,ss21,ss22}}}; \
@@ -39,78 +35,33 @@ S4_ROMSTART(flash,l2,"gamerom2.716", CRC(b7c2e4c7) SHA1(00ea34900af679b1b7e2698f
 S67S_SOUNDROMS8(     "sound1.716",CRC(f4190ca3) SHA1(ee234fb5c894fca5876ee6dc7ea8e89e7e0aec9c))
 S4_ROMEND
 #define input_ports_flash input_ports_s4
-CORE_GAMEDEF(flash,l2,"Flash (L-2)",1979,"Williams",s4_mS4S,0)
+CORE_GAMEDEF(flash,l2,"Flash (L-2)",1978,"Williams",s4_mS4S,0)
 
 S4_ROMSTART(flash,l1,"gamerom.716", CRC(287f12d6) SHA1(ede0c5b0ea2586d8bdf71ecadbd9cc8552bd6934),
                      "green1.716",  CRC(2145f8ab) SHA1(ddf63208559a3a08d4e88327c55426b0eed27654),
                      "green2.716",  CRC(1c978a4a) SHA1(1959184764643d58f1740c54bb74c2aad7d667d2))
 S67S_SOUNDROMS8(     "sound1.716",CRC(f4190ca3) SHA1(ee234fb5c894fca5876ee6dc7ea8e89e7e0aec9c))
 S4_ROMEND
-CORE_CLONEDEF(flash,l1,l2,"Flash (L-1)",1979,"Williams",s4_mS4S,0)
+CORE_CLONEDEF(flash,l1,l2,"Flash (L-1)",1978,"Williams",s4_mS4S,0)
 
 S4_ROMSTART(flash,t1,"gamerom.716", CRC(287f12d6) SHA1(ede0c5b0ea2586d8bdf71ecadbd9cc8552bd6934),
                      "green1.716",  CRC(2145f8ab) SHA1(ddf63208559a3a08d4e88327c55426b0eed27654),
                      "green2a.716",  CRC(16621eec) SHA1(14e1cf5f7227860a3219b2b79fa66dcf252dce98))
 S67S_SOUNDROMS8(     "sound1.716",CRC(f4190ca3) SHA1(ee234fb5c894fca5876ee6dc7ea8e89e7e0aec9c))
 S4_ROMEND
-CORE_CLONEDEF(flash,t1,l2,"Flash (T-1 Ted Estes)",1979,"Williams",s4_mS4S,0)
-
-/*--------------------------------
-/ Tri Zone - Sys.4 (Game #487)
-/-------------------------------*/
-INITGAMEFULL(trizn,s4_disp,SNDBRD_S67S,0,0,13,14,15,26,24,0)
-S4_ROMSTART(trizn,l1,"gamerom.716", CRC(757091c5) SHA1(00dac6c19b08d2528ea293619c4a39499a1a02c2),
-                     "green1.716", CRC(2145f8ab) SHA1(ddf63208559a3a08d4e88327c55426b0eed27654),
-                     "green2.716", CRC(1c978a4a) SHA1(1959184764643d58f1740c54bb74c2aad7d667d2))
-S67S_SOUNDROMS8(     "sound1.716",CRC(f4190ca3) SHA1(ee234fb5c894fca5876ee6dc7ea8e89e7e0aec9c))
-S4_ROMEND
-#define input_ports_trizn input_ports_s4
-CORE_GAMEDEF(trizn,l1,"Tri Zone (L-1)",1978,"Williams",s4_mS4S,0)
-
-S4_ROMSTART(trizn,t1,"gamerom.716", CRC(757091c5) SHA1(00dac6c19b08d2528ea293619c4a39499a1a02c2),
-                     "green1.716", CRC(2145f8ab) SHA1(ddf63208559a3a08d4e88327c55426b0eed27654),
-                     "green2a.716",  CRC(16621eec) SHA1(14e1cf5f7227860a3219b2b79fa66dcf252dce98))
-S67S_SOUNDROMS8(     "sound1.716",CRC(f4190ca3) SHA1(ee234fb5c894fca5876ee6dc7ea8e89e7e0aec9c))
-S4_ROMEND
-CORE_CLONEDEF(trizn,t1,l1,"Tri Zone (T-1 Ted Estes)",1978,"Williams",s4_mS4S,0)
+CORE_CLONEDEF(flash,t1,l2,"Flash (T-1 Ted Estes)",1978,"Williams",s4_mS4S,0)
 
 /*--------------------------------
 / Pokerino - Sys.4 (Game #488)
 /-------------------------------*/
-INITGAMEFULL(pkrno,s4_disp,SNDBRD_S67S,0,0,38,39,40,30,0,28)
+INITGAMEFULL(pkrno,s4_disp,SNDBRD_S3S,0,0,38,39,40,30,0,28)
 S4_ROMSTART(pkrno,l1,"gamerom.716", CRC(9b4d01a8) SHA1(1bd51745f38381ffc66fde4b28b76aab33b573ca),
                      "white1.716", CRC(9bbbf14f) SHA1(b0542ffdd683fa0ea4a9819576f3789cd5a4b2eb),
                      "white2.716", CRC(4d4010dd) SHA1(11221124fef3b7bf82d353d65ce851495f6946a7))
-S67S_SOUNDROMS8(     "sound1.716",CRC(f4190ca3) SHA1(ee234fb5c894fca5876ee6dc7ea8e89e7e0aec9c))
+S67S_SOUNDROMS8("488_s0_pokerino.716",CRC(5de02e62) SHA1(f838439a731511a264e508a576ae7193d9fed1af))
 S4_ROMEND
 #define input_ports_pkrno input_ports_s4
 CORE_GAMEDEF(pkrno,l1,"Pokerino (L-1)",1978,"Williams",s4_mS4S,0)
-
-/*--------------------------------
-/ Time Warp - Sys.4 (Game #489)
-/-------------------------------*/
-INITGAMEFULL(tmwrp,s4_disp,SNDBRD_S67S,0,0,19,20,21,22,23,0)
-S4_ROMSTART(tmwrp,l3,"twarp_l3.716", CRC(1234710a) SHA1(a33e9edb79b6ea4c5982d28a55289897f82b7b3c),
-                     "green1.716", CRC(2145f8ab) SHA1(ddf63208559a3a08d4e88327c55426b0eed27654),
-                     "green2.716", CRC(1c978a4a) SHA1(1959184764643d58f1740c54bb74c2aad7d667d2))
-S67S_SOUNDROMS8(     "sound1.716",CRC(f4190ca3) SHA1(ee234fb5c894fca5876ee6dc7ea8e89e7e0aec9c))
-S4_ROMEND
-#define input_ports_tmwrp input_ports_s4
-CORE_GAMEDEF(tmwrp,l3,"Time Warp (L-3)",1979,"Williams",s4_mS4S,0)
-
-S4_ROMSTART(tmwrp,l2,"gamerom.716", CRC(b168df09) SHA1(d4c97714636ce51be2e5f8cc5af89e10a2f82ac7),
-                     "green1.716", CRC(2145f8ab) SHA1(ddf63208559a3a08d4e88327c55426b0eed27654),
-                     "green2.716", CRC(1c978a4a) SHA1(1959184764643d58f1740c54bb74c2aad7d667d2))
-S67S_SOUNDROMS8(     "sound1.716",CRC(f4190ca3) SHA1(ee234fb5c894fca5876ee6dc7ea8e89e7e0aec9c))
-S4_ROMEND
-CORE_CLONEDEF(tmwrp,l2,l3,"Time Warp (L-2)",1979,"Williams",s4_mS4S,0)
-
-S4_ROMSTART(tmwrp,t2,"gamerom.716", CRC(b168df09) SHA1(d4c97714636ce51be2e5f8cc5af89e10a2f82ac7),
-                     "green1.716", CRC(2145f8ab) SHA1(ddf63208559a3a08d4e88327c55426b0eed27654),
-                     "green2a.716",  CRC(16621eec) SHA1(14e1cf5f7227860a3219b2b79fa66dcf252dce98))
-S67S_SOUNDROMS8(     "sound1.716",CRC(f4190ca3) SHA1(ee234fb5c894fca5876ee6dc7ea8e89e7e0aec9c))
-S4_ROMEND
-CORE_CLONEDEF(tmwrp,t2,l3,"Time Warp (T-2 Ted Estes)",1979,"Williams",s4_mS4S,0)
 
 /*--------------------------------
 / Stellar Wars - Sys.4 (Game #490)
